TofDaqR 0.3.2
--------------------------------------------------------------------------------

* Corrected bug in internal R-string to C-string conversion (introduced in
  TofDaqR 0.3.0).

* Using `Rcpp::stop()` to signal errors if TwRetVal != TwSuccess.


TofDaqR 0.3.1
--------------------------------------------------------------------------------

* `GetDescriptor()` returns int64 and uint64 values as strings.

* `AddLogEntry()` also accepts the `LogEntryTime` parameter.

* Added additional API functions (all `GetDaqParameter...()`,
  `SetDaqParameter...()` and `Set...AttributeInH5()` functions,
  `H5AddLogEntry()`, `H5GetMassCalibPar()`, `GetBufWriteProfileFromH5()`)


TofDaqR 0.3.0
--------------------------------------------------------------------------------

* Another major code refactoring: Rcpp is used for all C/C++ code.

* Added all `Get...2FromH5()` functions.


TofDaqR 0.2.0
--------------------------------------------------------------------------------

* Updated to TofDaq API 1.99r450.

* NAMESPACE generated by roxygen2::roxygenise().

* Major refactoring of the package: TofDaqWrapR.dll is not any more compiled
  with Visual Studio. Instead, the C++ source files of the C++/R wrapper are
  included in the package source and compiled with the GCC compiler. This makes
  package maintenance easier and allows the same workflow for all platforms.

* TofDaqR can also be installed on Linux and macOS (for using the twtool and
  twh5 functions)!


TofDaqR 0.1.7
--------------------------------------------------------------------------------

* Removed dependency on Rcpp package by moving `DecodeEventList()` and
  `EventList2TofSpec()` to TofDaqWrapR.dll.


TofDaqR 0.1.6
--------------------------------------------------------------------------------

* Corrected bug when package was unloaded.

* Some general code improvements in TofDaqWrapR.dll.

* `DecodeEventList()` now returns sample indices instead of time stamps.

* Updated some help pages.
