@@ -4,4 +4,6 @@
 }
 
 .onUnload = function(libpath) {
+  CleanupDll()
+  library.dynam.unload("TofDaqR", libpath)
 }
