@@ -407,21 +407,21 @@ List SiProcessSpectrumFromShMem(int specType, int BufIndex) {
 //' \code{KeepSharedMemMapped} Keeps the shared memory acquisition buffers mapped.
 //'
 //' The DLL periodically unmaps the shared memory to give the recorder
-//' application the possibility to (re)allocate the shared buffers. Set this
-//' option to true if you want to make sure that the shared memory pointers stay
+//' application the possibility to (re)allocate the shared buffers. Call this
+//' function if you want to make sure that the shared memory pointers stay
 //' valid while you work with them. In this case you must call
 //' \code{\link{ReleaseSharedMemory}} explicitly when finished with your
 //' processing operation.
 //'
-//' @param keepMapped \code{TRUE} or \code{FALSE}.
 //' @export
 // [[Rcpp::export]]
-void KeepSharedMemMapped(bool keepMapped) {
+void KeepSharedMemMapped() {
 
   // Note: This is part of TwGetSharedMemory, but here extracted as an
   // idependent function.
 
   TSharedMemoryPointer pShMem;
+  bool keepMapped = true;
 
   TwRetVal rv = TwGetSharedMemory(&pShMem, keepMapped);
 
